--- a/custom.css
+++ b/custom.css
@@ -10,6 +10,10 @@ h1 {
     border-bottom: thin solid black;
 }
 
+h2 {
+    border-bottom: thin solid black;
+}
+
 ul {
     margin-top:0px;
     padding-top:0px;
